# gooddata-haskell

./: LICENSE  Makefile  README.markdown  gooddata-haskell.cabal
Data/Conduit/: Aeson.hs
GoodData/: Expand.hs  Session.hs
GoodData/REST/: Session.hs  Types.hs
GoodData/REST/MD/: Query.hs
GoodData/REST/Types/: Account.hs  Basic.hs
GoodData/REST/Types/MD/: Obj.hs  Query.hs
Util/: HTTP.hs  JSON.hs
